# clf

./: Dockerfile  app.py  docker-compose.yml  export_html.py  nl_dental.json  nl_ortho.json  nl_ortho_osm.json  nl_population.json  precalculate.py  pyproject.toml  replit.nix  requirements.txt  streamlit_app.py
data/: dental_clinics.json  netherlands_boundary.geojson  potential_locations.json  schools.json
public/static/: netherlands_Netherlands_Country_Boundary.dbf  nl_ortho.json
templates/: map.html
