[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
replit = "^3.2.4"
Flask = "^2.2.0"
earthengine-api = "^0.1.417"
requests = "^2.32.3"
pyproj = "^3.6.1"
numpy = "^2.1.0"
pandas = "^2.2.2"
shapely = "^2.0.6"
geemap = "^0.34.0"
geopandas = "^1.0.1"
geopy = "^2.4.1"
ipyleaflet = "^0.19.2"
ipywidgets = "^8.1.5"
waitress = "^3.0.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"